# my-clib

./: CMakeLists.txt  README.md
include/lp/: lp.h  lp_arena.c  lp_arena.h  lp_assert.h  lp_bytes.h  lp_config.h  lp_fmt.h  lp_platform.h  lp_port.h  lp_ring.h  lp_status.h  lp_strview.h  lp_types.h
port/baremetal/: lp_port.c
port/posix/: lp_port.c
src/core/: lp_bytes.c  lp_fmt.c  lp_ring.c
tests/: test_bytes.c  test_fmt.c
